-feature#1691: Add a 'Copy graph' option to context menu of graphs
-feature#1703: Provide i18n for the graph right context menu
-feature#1709: Dont warn when attempting to make updates in the past
-feature#1711: Support specifying MySQL SSL file paths in the database API
-feature#1731: Warn a user if they are going off page and there are unsaved changes
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Add Timezone support for Remote Data Collectors
-feature: Add One Minute Sampling to the default Data Source Profiles
-feature: Allow Top tabs to be Glyphs or Text or both
-feature: Update JavaScript library c3.js to version 0.5.4
-feature: Update JavaScript library jquery.tablesorter.js to version 2.30.5
-feature: Update JavaScript library jquery-migrate.js to 3.0.1
-feature: Update phpseclib to version 2.0.11
-feature: Update JavaScript library jquery.js to 3.3.1
-feature: Make Top Tabs use Ajax Callback
-feature: Make all user settings dynamic and allow resetting to default.
-feature: Change password page provides visible confirmation of password rules
-feature: Allow ASCII filepath paths to not be found on settings save
-feature: Provide option to debug width errors where output exceeds column width
-feature: Allow snmpagent to be disabled for very large installs

1.1.38
-issue#1501: cmd.php poller not stripping alpha from snmp get values
-issue#1515: Special characters not rendered properly in settings
-issue#1530: Inconsistent behaviour handling blank Field Name/Value when editing data query suggested values
-issue#1537: Numeric validation not ignoring blank elements

1.1.37
-issue#274: Allow Realtime Graph Popup Mode
-issue#1405: When Data Query columns are wide, they cause rendering issues
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1419: Filtering log results in errors in the log